tests/bind/good/break-in-while2.py
while 1:
    while 1:
        while 1:
            break
        break
    break
