tests/bind/bad/break-out-while.py
while 1:
    0
break
